--- a/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
     <h1>The HTTP Database</h1>
-    <p class="lead">This project allows you to access information about the HTTP program, such as the courses, teachers, and the students enrolled. View the options below to see our APIs and teacher list.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">View the code here &raquo;</a></p>
+    <p class="lead">This project allows you to access information about the HTTP program, such as the courses, teachers, and the students enrolled. View the options below to see our APIs and more info on our teachers, classes, and students.</p>
+    <p><a href="https://github.com/a-hagar/HTTP-5101-Cumulative-Project" class="btn btn-primary btn-lg">View the code here &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
@@ -12,13 +12,13 @@
     </div>
     <div class="col-md-4">
         <h2>Classes</h2>
-        <p> Connected to a MySQL database, you can access all the information about our courses, including who the teacher is and who is enrolled.</p>
+        <p> Connected to a MySQL database, you can access all the information about our courses, including who teaches the course.</p>
         <p><a class="btn btn-default" href="api/ClassData/ListClasses">Courses API &raquo;</a></p>
         <p><a class="btn btn-default" href="/Class/List"> See all Courses &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Students</h2>
-        <p>Connected to a MySQL database, you can access all the information about our students, including what classes they are enrolled in and when they enrolled into the program.</p>
+        <p>Connected to a MySQL database, you can access all the information about our students.</p>
         <p><a class="btn btn-default" href="api/StudentData/ListStudents">Students API &raquo;</a></p>
         <p><a class="btn btn-default" href="/Student/List">See all Students &raquo;</a></p>
     </div>
