--- a/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
@@ -1,24 +1,24 @@
 ﻿<div class="jumbotron">
     <h1>The HTTP Database</h1>
     <p class="lead">This project allows you to access information about the HTTP program, such as the courses, teachers, and the students enrolled. View the options below to see our APIs and more info on our teachers, classes, and students.</p>
-    <p><a href="https://github.com/a-hagar/HTTP-5101-Cumulative-Project" class="btn btn-primary btn-lg">View the code here &raquo;</a></p>
+    <p><a href="https://github.com/a-hagar/HTTP-5101-Cumulative-Project"  target="_blank" class="btn btn-primary btn-lg">View the code here &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Teachers</h2>
-        <p>Connected to a MySQL database, you can access all the information about our teachers, including the courses they teach and their salary.</p>
+        <p>All our teacher data, including salary, hire date and the classes they teach in the program.</p>
         <p><a class="btn btn-default" href="api/TeacherData/ListTeachers">Teacher API &raquo;</a></p>
         <p><a class="btn btn-default" href="/Teacher/List"> See all Teachers &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Classes</h2>
-        <p> Connected to a MySQL database, you can access all the information about our courses, including who teaches the course.</p>
+        <p>All of the program's courses are here. Take a look at our course start and end times and who is teaching.</p>
         <p><a class="btn btn-default" href="api/ClassData/ListClasses">Courses API &raquo;</a></p>
         <p><a class="btn btn-default" href="/Class/List"> See all Courses &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Students</h2>
-        <p>Connected to a MySQL database, you can access all the information about our students.</p>
+        <p>Access all the information about our students enrolled into the program.</p>
         <p><a class="btn btn-default" href="api/StudentData/ListStudents">Students API &raquo;</a></p>
         <p><a class="btn btn-default" href="/Student/List">See all Students &raquo;</a></p>
     </div>
