--- a/HTTP 5101 Cumulative Project/Views/Teacher/List.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/List.cshtml
@@ -6,11 +6,20 @@
 <h2>Teachers</h2>
 <p>This pages shows a list of information of all teachers</p>
 
+<form class="search" action="/Teacher/List" method="get">
+    <input type="text" name="SearchKey" placeholder="Enter a name here..." />
+    <input type="submit" value="Search!" />
+</form>
+
+<br />
+
+
+<span >@Model.Count() Result(s) Found</span>
+
 <div>
     <h2>List of Teachers</h2>
     @foreach (var teacher in Model)
     {
         <div> <a href="/Teacher/Show/@teacher.TeacherId">@teacher.TeacherFname @teacher.TeacherLname</a></div>
-
     }
 </div>
