--- a/HTTP 5101 Cumulative Project/Views/Teacher/Show.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/Show.cshtml
@@ -6,8 +6,14 @@
 <a class="link" href="/Teacher/List">Back to Teachers</a>
 <div class="more-data">
     <h2>Teacher: @Model.TeacherFname @Model.TeacherLname</h2>
-    <p>TeacherId: @Model.TeacherId</p>
     <p>Employee #: @Model.EmployeeNum</p>
-    <p>Hire Date: @Model.HireDate.ToString("dddd, dd MMMM yyyy")</p>
+    <p>Hire Date: @Model.HireDate.ToString("dddd, MMMM dd, yyyy")</p>
     <p>Salary: $@Model.Salary</p>
+
+    <p>@Model.TeacherFname is teaching :</p>
+    <ul>
+
+            <li> <a href="/Class/Show/@Model.ClassId">@Model.ClassCode.ToUpper()  @Model.ClassName</a></li>
+    </ul>
+
 </div>
