add/delete update

--- a/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Home/Index.cshtml
@@ -11,10 +11,10 @@
         <p><a class="btn btn-default" href="/Teacher/List"> See all Teachers &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Classes</h2>
+        <h2>Courses</h2>
         <p>All of the program's courses are here. Take a look at our course start and end times and who is teaching.</p>
-        <p><a class="btn btn-default" href="api/ClassData/ListClasses">Courses API &raquo;</a></p>
-        <p><a class="btn btn-default" href="/Class/List"> See all Courses &raquo;</a></p>
+        <p><a class="btn btn-default" href="api/CourseData/ListCourses">Courses API &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Course/List"> See all Courses &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Students</h2>
