--- a/HTTP 5101 Cumulative Project/Views/Student/List.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Student/List.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "List";
 }
 
+<div>
+    <a href="/Student/New">Add New Student</a>
+</div>
+
 <h2>Students</h2>
 <p>This pages shows a list of information of all students</p>
 
@@ -20,4 +24,6 @@
 
     }
 </div>
+
+
 
