--- a/HTTP 5101 Cumulative Project/Views/Course/New.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/New.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "New";
 }
+<nav>
+    <a class="link" href="/Course/List">Back to Courses</a>
+</nav>
 
 <h2>New Course</h2>
 <p>Enter the information for a new course:</p>
