--- a/HTTP 5101 Cumulative Project/Views/Student/List.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Student/List.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    <a href="/Student/New">Add New Student</a>
+    <a class="link" href="/Student/New">Add New Student</a>
 </div>
 
 <h2>Students</h2>
