--- a/HTTP 5101 Cumulative Project/Views/Student/New.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Student/New.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "New";
 }
+<nav>
+    <a class="link" href="/Student/List">Back to Students</a>
+</nav>
 
 <h2>New Student</h2>
 <p>Enter the information for a new student</p>
