--- a/HTTP 5101 Cumulative Project/Views/Course/List.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/List.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "List";
 }
 <div>
-    <a href="/Course/New">Add New Course</a>
+    <a class="link" href="/Course/New">Add New Course</a>
 </div>
 
 <h2>Courses</h2>
