--- a/HTTP 5101 Cumulative Project/Views/Teacher/DeleteConfirm.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/DeleteConfirm.cshtml
@@ -1,15 +1,16 @@
 ﻿@model HTTP_5101_Cumulative_Project.Models.Teacher
 @{
-    ViewBag.Title = "DeleteConfirm";
-}
+    ViewBag.Title = "DeleteConfirm"; }
+
+
 <nav>
     <a class="link" href="/Teacher/Show/@Model.TeacherId">Go Back</a>
 </nav>
 
-<h2>Are you sure you want to delete this teacher?</h2>
+<h2>Are you sure you want to delete this teacher's info?</h2>
 <p>@Model.TeacherFname @Model.TeacherLname</p>
 
-<p>This cannot be undone!</p>
+<p style="font-weight:700;">This cannot be undone!</p>
 <form method="post" action="/Teacher/Delete/@Model.TeacherId">
-    <input type="submit" style="margin: 0 auto; display: block;" value="Delete Teacher" />
+    <input type="submit" class="deleteBtn" value="Delete Teacher" />
 </form>
