--- a/HTTP 5101 Cumulative Project/Views/Teacher/List.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/List.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    <a href="/Teacher/New">Add New Teacher</a>
+    <a class="link" href="/Teacher/New">Add New Teacher</a>
 </div>
 
 <h2>Teachers</h2>
