--- a/HTTP 5101 Cumulative Project/Views/Teacher/New.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/New.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "New";
 }
+<nav>
+    <a class="link" href="/Teacher/List">Back to Teachers</a>
+</nav>
 
 <h2>New Teacher</h2>
 <p>Enter the information for a new teacher:</p>
