--- a/HTTP 5101 Cumulative Project/Views/Teacher/New.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/New.cshtml
@@ -35,7 +35,8 @@
 
 </form>
 
-@* Comment goes here
+@* testing form validation
+
     <script defer>
         var teacherForm = document.forms.addTeacher;
 
