--- a/HTTP 5101 Cumulative Project/Views/Course/DeleteConfirm.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/DeleteConfirm.cshtml
@@ -10,6 +10,6 @@
 <p>@Model.CourseCode.ToUpper() @Model.CourseName</p>
 
 <p style="font-weight:700;">This cannot be undone!</p>
-<form method="post" action="/Class/Delete/@Model.CourseId">
+<form method="post" action="/Course/Delete/@Model.CourseId">
     <input type="submit" class="deleteBtn" value="Delete Course" />
 </form>
