update feature & parameterized sql queries

--- a/HTTP 5101 Cumulative Project/Views/Course/Show.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/Show.cshtml
@@ -12,4 +12,6 @@
     <p>Course Code: @Model.CourseCode.ToUpper() </p>
     <p>Start Date: @Model.StartDate.ToString("dddd, MMMM dd, yyyy")</p>
     <p>Finish Date: @Model.FinishDate.ToString("dddd, MMMM dd, yyyy")</p>
+
+    <a class="link" href="/Course/Update/@Model.CourseId">Update Course</a>
 </div>
