--- a/HTTP 5101 Cumulative Project/Views/Teacher/Show.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Teacher/Show.cshtml
@@ -12,5 +12,5 @@
      <p>Hire Date: @Model.HireDate.ToString("dddd, MMMM dd, yyyy")</p>
      <p>Salary: $@Model.Salary</p>
 
-
+     <a class="link" href="/Teacher/Update/@Model.TeacherId">Update Teacher</a>
  </div>
