--- a/HTTP 5101 Cumulative Project/Views/Course/New.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/New.cshtml
@@ -8,15 +8,15 @@
 
 <h2>New Course</h2>
 <p>Enter the information for a new course:</p>
-<form method="post" action="/Class/Create" name="addCourse">
+<form method="post" action="/Course/Create" name="addCourse">
     <div>
         <label>Course Code: </label>
-        <input type="text" name="ClassCode" />
+        <input type="text" name="CourseCode" />
         <span id="errorCourseCode"></span>
     </div>
     <div>
         <label>Course Name: </label>
-        <input type="text" name="ClassName" />
+        <input type="text" name="CourseName" />
         <span id="errorCourseName"></span>
     </div>
     <div>
