--- a/HTTP 5101 Cumulative Project/Views/Course/Show.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Course/Show.cshtml
@@ -13,5 +13,7 @@
     <p>Start Date: @Model.StartDate.ToString("dddd, MMMM dd, yyyy")</p>
     <p>Finish Date: @Model.FinishDate.ToString("dddd, MMMM dd, yyyy")</p>
 
-    <a class="link" href="/Course/Update/@Model.CourseId">Update Course</a>
+    
 </div>
+
+<a class="uplink" href="/Course/Update/@Model.CourseId">Update Course</a>
