--- a/HTTP 5101 Cumulative Project/Views/Student/Show.cshtml
+++ b/HTTP 5101 Cumulative Project/Views/Student/Show.cshtml
@@ -16,6 +16,7 @@
     <p>Enrolment Date: @Model.EnrolDate.ToString("dddd, MMMM dd , yyyy")</p>
     <br />
 
-    <a class="link" href="/Student/Update/@Model.StudentId">Update Student</a>
+    
 </div>
 
+<a class="uplink" href="/Student/Update/@Model.StudentId">Update Student</a>
