--- a/HTTP 5101 Cumulative Project/Content/Site.css
+++ b/HTTP 5101 Cumulative Project/Content/Site.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    height: 100vh;
+    margin-bottom: 30px;
+    position: relative;
+
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -8,6 +12,11 @@
     width: 80%;
     padding-left: 15px;
     padding-right: 15px;
+    height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -31,6 +40,13 @@ textarea {
     margin-bottom: 20px;
     float: left;
     color: red;
+}
+.uplink {
+    text-align: right;
+    margin-top: 30px;
+    margin-left: 10%;
+    margin-bottom: 20px;
+    float: left;
 }
 .deleteBtn {
     margin: 0 auto;
@@ -63,4 +79,10 @@ input[type=text] {
 
 h2{
     margin-top: 90px;
+}
+
+footer {
+    position: relative;
+    margin-top: 20%;
+    width: 100%;
 }
